add two component profile and teachers with new methods getby role , get picture and update address and finaly installing leaftet and google maps
