# src/app/services/services/auth-controller.service.ts
@@ -12,10 +12,13 @@ import { StrictHttpResponse } from '../strict-http-response';
 import { AuthenticationResponse } from '../models/authentication-response';
 import { confirm } from '../fn/auth-controller/confirm';
 import { Confirm$Params } from '../fn/auth-controller/confirm';
+import { getCurrentUser } from '../fn/auth-controller/get-current-user';
+import { GetCurrentUser$Params } from '../fn/auth-controller/get-current-user';
 import { login } from '../fn/auth-controller/login';
 import { Login$Params } from '../fn/auth-controller/login';
 import { register } from '../fn/auth-controller/register';
 import { Register$Params } from '../fn/auth-controller/register';
+import { User } from '../models/user';
 
 @Injectable({ providedIn: 'root' })
 export class AuthControllerService extends BaseService {
@@ -74,6 +77,31 @@ export class AuthControllerService extends BaseService {
   login(params: Login$Params, context?: HttpContext): Observable<AuthenticationResponse> {
     return this.login$Response(params, context).pipe(
       map((r: StrictHttpResponse<AuthenticationResponse>): AuthenticationResponse => r.body)
+    );
+  }
+
+  /** Path part for operation `getCurrentUser()` */
+  static readonly GetCurrentUserPath = '/api/auth/me';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `getCurrentUser()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getCurrentUser$Response(params?: GetCurrentUser$Params, context?: HttpContext): Observable<StrictHttpResponse<User>> {
+    return getCurrentUser(this.http, this.rootUrl, params, context);
+  }
+
+  /**
+   * This method provides access only to the response body.
+   * To access the full response (for headers, for example), `getCurrentUser$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getCurrentUser(params?: GetCurrentUser$Params, context?: HttpContext): Observable<User> {
+    return this.getCurrentUser$Response(params, context).pipe(
+      map((r: StrictHttpResponse<User>): User => r.body)
     );
   }
 
